api changes meter readings
