# server/controllers/meterReadingsController.js
@@ -3,12 +3,35 @@ var mqtt=require('mqtt');
 
 exports.getMeterReadings = async (req, res) => {
 
+    const {fromDate,toDate,readingRange} = req.body;
+    let readings = await  meterReadingsService.getMeterReadings({
+        fromDate,toDate,readingRange
+    });
+   
+    res.json(readings);
+     
+   
+   };
 
- let readings = await  meterReadingsService.getMeterReadings();
+exports.getLatestMeterReading = async (req, res) => {
 
- res.json(readings);
-  
+   //const {fromDate,toDate,readingRange} = req.body;
+    let reading = await  meterReadingsService.getLatestMeterReading();
+   
+    res.json(reading);
+    
+}
 
-};
+// temporary - 
+   exports.updateReadingsCollection = async (req, res) => {
+   
+    const {fromDate,toDate} = req.body;
+    let readings = await  meterReadingsService.updateReadingsCollection();
+   
+    res.json(readings);
+     
+   
+   };
+
 
 module.exports = exports;
