# server/routes/meterReadingRoutes.js
@@ -2,6 +2,12 @@ const express = require("express");
 const app = express();
 const meterReadingsController = require("../controllers/meterReadingsController");
 
-app.get("/getMeterReadings", meterReadingsController.getMeterReadings);
+app.post("/getMeterReadings", meterReadingsController.getMeterReadings);
+
+
+app.get("/getLatestMeterReading", meterReadingsController.getLatestMeterReading);
+
+app.get("/updateReadingsCollection", meterReadingsController.updateReadingsCollection);
+
 
 module.exports = app;
